<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_fb"
        android:title="Facebook"
        android:icon="@drawable/facebook"
        android:orderInCategory="101"
        app:showAsAction="always" />

    <item android:id="@+id/action_twt"
        android:title="Twitter"
        android:icon="@drawable/x_logo"
        android:orderInCategory="102"
        app:showAsAction="always" />

    <item android:id="@+id/action_tik"
        android:title="Tik-Tok"
        android:icon="@drawable/tiktok"
        android:orderInCategory="103"
        app:showAsAction="always" />

    <item android:id="@+id/action_about"
        android:title="About"
        android:orderInCategory="104"
        app:showAsAction="never" />

</menu>