<resources>
    <string name="app_name">Android Assignment</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="login_label">Login</string>
    <string name="password_label">Password</string>
    <string name="password_hint">enter password</string>
    <string name="login_name">login name</string>
    <string name="my_application">My Application</string>
    <string name="radio_button">Radio Button</string>
    <string name="checkbox">Check Box</string>
    <string name="switch_label">What does this do ?</string>
    <string name="image_desc">image placeholder</string>
    <string name="login_btn_txt">Login</string>
    <string name="filename">userdata</string>
    <string name="email_address">email address</string>
    <string name="dialog_title">Close Page</string>
    <string name="dialog_message">Do you want to close this page?</string>
    <string name="ok">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="response">Here is my response</string>
    <string name="chat_btn_label">Start Chat</string>
    <string name="chatbox_message">Type your message</string>
    <string name="send_btn_label">Send</string>
    <string name="chat_view">chat messages appear here</string>
    <string name="chat_out_view">incoming chat messages</string>
    <string name="toolbar_btn_label">Test Toolbar</string>
    <string name="toolbar_dialog_message">Do you want to go back?</string>
    <string name="new_msg">New Message</string>
    <string name="new_custom_message">New Message</string>
    <string name="image_viewer_description">image viewer</string>
    <string name="test_toolbar">Test Toolbar</string>
    <string name="chat_activity">Chat Activity</string>
    <string name="list_items_toolbar">List Items Activity</string>
    <string name="login_toolbar">Login Activity</string>
    <string name="main_activity_toolbar">Main Activity</string>
    <string name="weather_btn_label">Weather Forecast</string>
    <string name="current_temperature">Current Temperature</string>
    <string name="minimum_temperature">Minimum Temperature</string>
    <string name="maximum_temperature">Maximum Temperature</string>
    <string name="imgview">Vue des images</string>
    <string name="city_list">Select a Canadian City</string>
    <string name="delete_message">Delete this message</string>
    <string name="selected_msg_tv">Selected message will appear Here</string>
    <string name="msg_id_tv">"ID = "</string>
    <string-array name="cities">
        <item>Ottawa</item>
        <item>Barrie</item>
        <item>Belleville</item>
        <item>Brampton</item>
        <item>Brantford</item>
        <item>Burlington</item>
        <item>Cambridge</item>
        <item>Etobicoke</item>
        <item>Guelph</item>
        <item>Hamilton</item>
        <item>Kingston</item>
        <item>Kitchener</item>
        <item>London</item>
        <item>Markham</item>
        <item>Milton</item>
        <item>Mississauga</item>
        <item>Oakville</item>
        <item>Oshawa</item>
        <item>Richmond Hill</item>
        <item>Scarborough</item>
        <item>Sudbury</item>
        <item>Toronto</item>
        <item>Vaughan</item>
        <item>Windsor</item>
    </string-array>
</resources>